Switch layout of editors notes on larger screens, fix IE8 background covers

--- a/client/styles/components/_cover.scss
+++ b/client/styles/components/_cover.scss
@@ -4,7 +4,8 @@
 
   .core & {
     background-image: url('../images/d-#{$name}-960.jpg');
-    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/d-#{$name}-960.jpg', sizingMethod='scale')";
+    // Path is relative to the document, not stylesheet
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='images/d-#{$name}-960.jpg', sizingMethod='scale')";
   }
 
   .enhanced & {
@@ -27,25 +28,13 @@
   }
 }
 
-%cover {
+.cover {
   position: relative;
   min-height: 100%;
 
   @media screen and (min-height: 480px) {
     height: 100vh;
   }
-}
-
-%cover-fill {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.cover {
-  @extend %cover;
 }
 
 .cover__content {
@@ -60,9 +49,13 @@
 }
 
 .cover__image {
-  @extend %cover-fill;
   @include cover-image('hero');
+  position: absolute;
+  top: 0;
+  left: 0;
   z-index: -1;
+  width: 100%;
+  height: 100%;
 
   .enhanced & {
     // No easy background-attachment: fixed on iOS
@@ -80,7 +73,11 @@
 
 .cover__image__mask {
   .enhanced & {
-    @extend %cover-fill;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background: rgba(#232322, 0.9);
     opacity: 0;
     transition: opacity 0.1s;
